--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "avansOneFix",
+  "name": "Avans One fix",
   "version": "1.0",
-  "description": "Adds a red border to all webpages on srcmake.com",
+  "description": "Fixes the warp when lesson names are to long",
   "icons": 
         {
         "48": "avans-logo.png"
