--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "Avans One fix",
   "version": "1.0",
-  "description": "Fixes the warp when lesson names are to long",
+  "description": "Fixes the annoying problems with lessons",
   "icons": {
     "48": "content/avans-logo.png"
   },
