--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -9,8 +9,8 @@
   "content_scripts": [
     {
       "matches": ["*://*.avans.one/*"],
-      "css": ["style.css"],
-      "js": ["main.js"],
+      "css": ["css/style.css"],
+      "js": ["js/main.js", "js/utils.js"],
       "run_at": "document_idle"
     }
   ]
